src/parse/snapshots/blis__parse__parser__tests__test_programs__err_compile__self_outside_method_func.blis.ast.snap
---
source: src/parse/parser.rs
description: "func g() {\n    self;\n}\n"
input_file: test_programs/err_compile/self_outside_method_func.blis
---
Program(
  decls: [
    Func(Func(
      ident: Identifier(
        name: "g",
      ),
      params: [],
      body: Block(
        decls: [
          Statement(Expression(LogicOr(LogicOr(
            first: LogicAnd(
              first: Value(Value(Value(Value(Value(Value(Atom(Identifier(Identifier(
                name: "self",
              ))))))))),
              rest: [],
            ),
            rest: [],
          )))),
        ],
        expr: None,
      ),
    )),
  ],
)
