src/parse/snapshots/blis__parse__parser__tests__test_programs__err_compile__self_outside_method_script.blis.ast.snap
---
source: src/parse/parser.rs
description: "self;\n"
input_file: test_programs/err_compile/self_outside_method_script.blis
---
Program(
  decls: [
    Statement(Expression(LogicOr(LogicOr(
      first: LogicAnd(
        first: Value(Value(Value(Value(Value(Value(Atom(Identifier(Identifier(
          name: "self",
        ))))))))),
        rest: [],
      ),
      rest: [],
    )))),
  ],
)
